[package]
name = "pomodoro-tracker"
version = "0.1.1"
edition = "2021"
authors = ["Ye Gao <ye.gao@student.tdsb.on.ca"]
description = "A Pomodoro timer CLI that tracks directory changes during work sessions"
license = "MIT"
repository = "https://github.com/GaoYeGithub/pomodoro_timer"
keywords = ["pomodoro", "productivity", "cli", "timer", "filesystem"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = "0.4"
difference = "2.0"
indicatif = "0.17"
notify-rust = "4.10"